refs #1490 small style fix in website selector - label was hidden behind selector
git-svn-id: http://dev.piwik.org/svn/trunk@2896 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -232,9 +232,7 @@ a {
 
 .sites_selection .custom_select, .sites_selection #sitesSelection{
 	z-index:19;
-	position:absolute; 
-	top:0;
-	right:0;
+	position:relative; 
 	display:inline-block; 
 	padding:6px 6px 5px 6px;
 	background:#fff url(./images/sites_selection.png) repeat-x 0 0;
